# cpp_codecov_test

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
gtest/: CMakeLists.txt  example_divide.cpp  sample1.h
src/: example.cpp  example.h
